fixed button stretch

--- a/src/components/form/CompanySignUpForm.module.css
+++ b/src/components/form/CompanySignUpForm.module.css
@@ -65,7 +65,7 @@
 .specialization-choices {
   all: unset;
   display: grid;
-  grid-template-columns: auto auto;
+  grid-template-columns: 1fr 1fr;
   justify-content: space-between;
   align-items: center;
   width: 100%;
